--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">bitsandpizzas</string>
     <string name="action_create_order">Create Order</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Settings!!</string>
     <string name="action_share">Share</string>
     <string name="title_top">Top fragment</string>
     <string-array name="pizzas">
